support for JPA relations
